force-app/main/default/objects/blng__PaymentAllocationInvoice__c/fields/Applied_to_Trans__c.field-meta.xml
<CustomField>
    <fullName>Applied_to_Trans__c</fullName>
    <label>Applied to Trans</label>
    <length>255</length>
    <type>Text</type>
</CustomField>