force-app/main/default/objects/blng__PaymentAllocationInvoice__c/fields/NS_Invoice_Internal_ID__c.field-meta.xml
<CustomField>
    <fullName>NS_Invoice_Internal_ID__c</fullName>
    <label>NS Invoice Internal ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>