force-app/main/default/objects/blng__PaymentAllocationInvoice__c/fields/NS_Pay_Alloc_Date__c.field-meta.xml
<CustomField>
    <fullName>NS_Pay_Alloc_Date__c</fullName>
    <label>NS Pay Alloc Date</label>
    <type>Date</type>
</CustomField>