force-app/main/default/objects/blng__PaymentAllocationInvoice__c/fields/NS_Pay_Alloc_Doc_Number__c.field-meta.xml
<CustomField>
    <fullName>NS_Pay_Alloc_Doc_Number__c</fullName>
    <label>NS Pay Alloc Doc Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>